tests/fails/invalid-default-2.stderr
error: expected module identifier
 --> $DIR/invalid-default-2.rs:4:21
  |
4 | #[blanket(default = "a b")]
  |                     ^^^^^
